
- ``with`` and ``as`` are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

- Fix Issue #1703448: A joined thread could show up in the
  threading.enumerate() list after the join() for a brief period until
  it actually exited.


Library
-------

- #2021: Allow tempfile.NamedTemporaryFile and SpooledTemporaryFile
  to be used in with statements by correctly supporting the context
  management protocol.

- #1979: Add rich comparisons to Decimal, and make Decimal comparisons
  involving a NaN follow the IEEE 754 standard.

- #2004: tarfile.py: Use mode 0700 for temporary directories and default
  permissions for missing directories.

- #175006: The debugger used to skip the condition of a "while" statement
  after the first iteration. Now it correctly steps on the expression, and
  breakpoints on the "while" statement are honored on each loop.

- #1765140: add an optional delay argument to FileHandler and its
  subclasses. Defaults to false (existing behaviour), but if true,
  defers opening the file until the first call to emit().

- The pprint module now supports sets and frozensets.

- #1221598: add optional callbacks to ftplib.FTP's storbinary() and
  storlines() methods.  (Contributed by Phil Schwartz)

- #1715: include sub-extension modules in pydoc's text output.

- #1836: fix an off-by-one bug in TimedRotatingHandler's rollover
  time calculation.

- #1021: fix a bug to allow basicConfig to accept NOTSET as a level.

- #932563: add LoggerAdapter convenience class to make it easier to add
  contextual information in logging output.

- #1760556: fix a bug to avoid FileHandler throwing an exception in
  flush().

- Bug #1530959: distutils' build command now uses different build directory
  when building extension modules against versions of Python compiled
  with ``--with-pydebug``.
